--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -7,13 +7,44 @@
 {% endblock %}
 
 {% block body %}
-    <div id="feedback-form">
-        <h2>{{ feedback.title }}</h2>
-        <div>
-            {{ feedback.author.username }}
-        </div>
-        <div>
-            {{ feedback.description }}
-        </div>
+    <div id="feedback">
+        <header>
+            <h2>
+                <div class="type-image">
+                    <img src="{{ asset('images/icons/' ~ ((feedback.type == 'bug') ? 'bug.png': 'evolution.png')) }}" />
+                </div>
+                {{ feedback.title }}
+            </h2>
+        </header>
+        <section>
+            <div class="infos">
+                <div class="info-card">
+                    <em>{{ 'project.feedback.author' | trans }}</em>
+                    <strong>{{ feedback.author.username }}</strong>
+                </div>
+                <div class="info-card">
+                    <em>{{ 'project.feedback.status' | trans }}</em>
+                    <strong>{{ 'project.status.' ~ feedback.status | trans }}</strong>
+                </div>
+                <div class="info-card">
+                    <em>{{ 'project.feedback.created_at' | trans }}</em>
+                    <strong>{{ feedback.createdAt|date('full_date'| trans) }}</strong>
+                </div>
+                {% if feedback.createdAt != feedback.updatedAt %}
+                <div class="info-card">
+                    <em>{{ 'project.feedback.updated_at' | trans }}</em>
+                    <strong>{{ feedback.updatedAt|date('full_date'| trans) }}</strong>
+                </div>
+                {% endif %}
+            </div>
+            <div class="content">
+                <div class="description">
+                    {{ feedback.description | raw }}
+                </div>
+            </div>
+            <div class="actions">
+                
+            </div>
+        </section>
     </div>
 {% endblock %}
