--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,7 +8,7 @@ body {
     margin:0px;
 }
 
-header {
+body > header {
     padding-left:20px;
     padding-right:10px;
     background-color: #222;
@@ -18,7 +18,7 @@ header {
     border-bottom: 2px solid #EFEFEF;
 }
 
-header a {
+body > header a {
     color: #08C;
     padding-left:10px;
     padding-right:10px;
@@ -29,4 +29,20 @@ header a {
 #toolbar {
     display: flex;
     align-items: center;
+}
+
+.info-card {
+    max-width: 320px;
+    background: rgba(0,0,0,0.6);
+    margin-bottom:10px;
+    padding: 10px 20px;
+}
+
+.info-card em {
+    display: block;
+}
+
+.info-card strong {
+    display:block;
+    font-size: 1.2em;
 }
