--- a/web/css/project.css
+++ b/web/css/project.css
@@ -65,7 +65,33 @@
 .type-image img {
     width:48px;
     height:48px;
-    background-color: #565656;
+    background-color: rgba(0,0,0,0.6);
     border-radius:25px;
     border: 1px solid #EFEFEF;
+}
+
+#feedback {
+    width: 90%;
+    margin: auto;
+}
+
+#feedback > header > h2 {
+    display: flex;
+    align-items: center;
+}
+
+#feedback > section {
+    display:flex;
+}
+
+#feedback > section > .infos {
+    flex-grow: 1;
+}
+
+#feedback > section > .content {
+    flex-grow: 4;
+}
+
+#feedback > section > .actions {
+    flex-grow: 1;
 }
