--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -24,7 +24,7 @@
                 </div>
                 <div class="info-card">
                     <em>{{ 'project.feedback.status' | trans }}</em>
-                    <strong>{{ 'project.status.' ~ feedback.status | trans }}</strong>
+                    <strong>{{ ('project.status.' ~ feedback.status) | trans }}</strong>
                 </div>
                 <div class="info-card">
                     <em>{{ 'project.feedback.created_at' | trans }}</em>
