--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -72,6 +72,10 @@
                         {{ 'project.feedback.update' | trans }}
                     </button>
                 {% endif %}
+                    <br/><br/>
+                  <div id="home-button">
+                     <a href="{{ path('project_board') }}">{{ 'project.commentary.home' | trans }}</a>
+                  </div>
             </div>
         </section>
     </div>
