--- a/web/css/project.css
+++ b/web/css/project.css
@@ -126,6 +126,24 @@
     display: none;
 }
 
+#home-button {
+    background-color: rgba(0,0,0,0.8);
+    padding:15px 30px;
+    color: #A0A0A0;
+    border: 1px solid #A0A0A0;
+    border-radius:40px;
+    text-align: center ;
+}
+
+#home-button > a {
+    color: #A0A0A0;
+    text-decoration: none ;
+}
+
+#home-button > a:visited {
+    color: #A0A0A0;
+}
+
 .comment {
     margin:10px 10%;
     background-color: rgba(0,0,0,0.8);
