--- a/web/css/project.css
+++ b/web/css/project.css
@@ -109,39 +109,19 @@
     padding: 5px;
 }
 
-#feedback > section > .actions {
-    flex-grow: 1;
-}
-
-#feedback > section > .actions > button {
+.action-button {
     cursor: pointer;
     background-color: rgba(0,0,0,0.8);
     padding:15px 30px;
     color: #A0A0A0;
     border: 1px solid #A0A0A0;
     border-radius:40px;
+    margin-bottom: 2px;
 }
+
 
 #update-description-button {
     display: none;
-}
-
-#home-button {
-    background-color: rgba(0,0,0,0.8);
-    padding:15px 30px;
-    color: #A0A0A0;
-    border: 1px solid #A0A0A0;
-    border-radius:40px;
-    text-align: center ;
-}
-
-#home-button > a {
-    color: #A0A0A0;
-    text-decoration: none ;
-}
-
-#home-button > a:visited {
-    color: #A0A0A0;
 }
 
 .comment {
