--- a/web/css/project.css
+++ b/web/css/project.css
@@ -110,13 +110,16 @@
 }
 
 .action-button {
+    display:block;
+    min-width:150px;
+    width:100%;
     cursor: pointer;
     background-color: rgba(0,0,0,0.8);
     padding:15px 30px;
     color: #A0A0A0;
     border: 1px solid #A0A0A0;
     border-radius:40px;
-    margin-bottom: 2px;
+    margin-bottom: 20px;
 }
 
 
