Refactor main layout with animated menu

--- a/app/Resources/views/front/index.html.twig
+++ b/app/Resources/views/front/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    
+    <div id="logo">
+        <img src="{{ asset('images/logo_typo_white.png') }}">
+    </div>
 {% endblock %}
