--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,12 +5,62 @@
         <title>{% block title %}{{ 'website_name' | trans }}{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}" />
+            <link rel="stylesheet" type="text/css" href="{{ asset('css/menu.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% include 'front/header.html.twig' %}
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        
+		<div class="container">
+			<div class="menu-wrap">
+				<nav class="menu-top">
+					<div class="profile">
+                        <span>
+                            {% if is_granted('ROLE_USER') %}
+                                {{ app.user.username }}
+                                <a href="{{ path('fos_user_security_logout') }}">
+                                    <img src="{{ asset('images/icons/logout.png') }}" />
+                                </a>
+                            {% else %}
+                                {{ 'anonymous' | trans }}
+                            {% endif %}
+                        </span>
+                    </div>
+					<div class="icon-list">
+                        {% if is_granted('ROLE_USER') == false %}
+                            <a href="{{ path('fos_user_registration_register') }}">
+                                {{ 'registration' | trans }}
+                            </a>
+                            <a href="{{ path('fos_user_security_login') }}">
+                                {{ 'connection' | trans }}
+                            </a>
+                        {% else %}
+                            <!--
+                            <a href="#">A</a>
+                            <a href="#">B</a>
+                            <a href="#">C</a>
+                            <a href="#">D</a>
+                            -->
+                        {% endif %}
+                            
+					</div>
+				</nav>
+				<nav class="menu-side">
+					{% if app.request.attributes.get('_route') != 'homepage' %}<a href="{{ path('homepage') }}">{{ 'homepage' | trans }}</a>{% endif %}
+                    {% if is_granted('ROLE_ADMIN') and app.request.attributes.get('_route') != 'admin_dashboard' %}<a href="{{ path('admin_dashboard') }}">{{ 'admin.dashboard' | trans }}</a>{% endif %}
+                    {% if is_granted('ROLE_USER') and app.request.attributes.get('_route') != 'dashboard' %}<a href="{{ path('dashboard') }}">{{ 'user.dashboard' | trans }}</a>{% endif %}
+					{% if app.request.attributes.get('_route') != 'project_board' %}<a href="{{ path('project_board') }}">{{ 'project.board' | trans }}</a>{% endif %}
+				</nav>
+			</div>
+			<button class="menu-button" id="open-button">Open Menu</button>
+			<div class="content-wrap">
+				<div class="content">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
+        </div>
+        {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('js/menu.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
