--- a/web/css/main.css
+++ b/web/css/main.css
@@ -31,6 +31,11 @@ body > header a {
     align-items: center;
 }
 
+#logo {
+    text-align:center;
+    margin-top:10%;
+}
+
 .info-card {
     max-width: 320px;
     background: rgba(0,0,0,0.6);
