--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -55,6 +55,7 @@
 			<button class="menu-button" id="open-button">Open Menu</button>
 			<div class="content-wrap">
 				<div class="content">
+                    <div id="page-title"><h1>{% block page_title %}{% endblock %}</h1></div>
                     {% block body %}{% endblock %}
                 </div>
             </div>
