--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -31,6 +31,8 @@ body,
 
 .content {
 	position: relative;
+    width:100%;
+    height:100%;
 }
 
 /* Overlay */
@@ -43,6 +45,7 @@ body,
 	height: 100%;
 	content: '';
 	opacity: 0;
+	background: rgba(0,0,0,0.3);
 	-webkit-transform: translate3d(100%,0,0);
 	transform: translate3d(100%,0,0);
 	-webkit-transition: opacity 0.3s, -webkit-transform 0s 0.3s;
