--- a/web/css/project.css
+++ b/web/css/project.css
@@ -1,28 +1,16 @@
-#board-header {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#board-header h2 {
-    flex-grow: 4;
-}
-
-#board-tools {
-    display: flex;
-    flex-grow:1;
-    justify-content: space-around;
-}
-
-#board-tools a {
-    padding:5px 10px;
-    color: #EFEFEF;
-    text-decoration: none;
-    background-color: rgba(0,0,0,0.6);
-    border: 1px solid #EFEFEF;
-}
-
 #board {
+    margin:20px;
+}
+
+#board > header {
+    margin-bottom:20px;
+}
+
+#board > header > .button {
+    margin-right:10px;
+}
+
+#board > section {
     display: flex;
     justify-content: space-around;
 }
@@ -61,22 +49,10 @@
     font-weight: bold;
 }
 
-.type-image {
-    margin-left:10px;
-    margin-right:20px;
-}
-
-.type-image img {
-    width:48px;
-    height:48px;
-    background-color: rgba(0,0,0,0.6);
-    border-radius:25px;
-    border: 1px solid #EFEFEF;
-}
-
 #feedback {
     width: 90%;
     margin: auto;
+    margin-top:40px;
 }
 
 #feedback > header > h2 {
@@ -92,18 +68,18 @@
     flex-grow: 1;
 }
 
-#feedback > section > .content {
+#feedback > section > .feedback-content {
     flex-grow: 4;
 }
 
-#feedback > section > .content > .description {
+#feedback > section > .feedback-content > .description {
     margin: auto;
     width:80%;
     padding:20px;
     background: rgba(0,0,0,0.6);
 }
 
-#feedback > section > .content > .description > textarea {
+#feedback > section > .feedback-content > .description > textarea {
     width:100%;
     resize: none;
     padding: 5px;
