--- a/app/Resources/views/project/new_evolution.html.twig
+++ b/app/Resources/views/project/new_evolution.html.twig
@@ -6,12 +6,19 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/project.css') }}" />
 {% endblock %}
 
+{% block page_title %}{{ 'project.feedback.propose_evolution' | trans }}{% endblock %}
+
 {% block body %}
-    <div id="feedback-form">
-        <h2>{{ 'project.feedback.propose_evolution' | trans }}</h2>
+    <div id="feedback-form" class="form">
         <form method="post" action="{{ path('create_evolution') }}">
-            <input type="text" name="title" placeholder="{{ 'project.feedback.title' | trans }}" />
-            <textarea name="description"></textarea>
+            <div class="form-group">
+                <label for="title">{{ 'project.feedback.title' | trans }}</label>
+                <input type="text" name="title" />
+            </div>
+            <div class="form-group">
+                <label for="description">{{ 'project.feedback.description' | trans }}</label>
+                <textarea name="description"></textarea>
+            </div>
             <button type="submit">{{ 'project.feedback.create' | trans }}</button>
         </form>
     </div>
