--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9,9 +9,20 @@ body {
 }
 
 #page-title h1 {
+    display: flex;
+    align-items: center;
     margin:0px;
     padding-top: 30px;
     padding-left: 100px;
+}
+
+#page-title h1 > img {
+    width:48px;
+    height:48px;
+    margin-right:15px;
+    background-color: rgba(0,0,0,0.6);
+    border-radius:25px;
+    border: 1px solid #EFEFEF;
 }
 
 #logo {
