Update server creation form

--- a/app/Resources/views/admin/game/server/new.html.twig
+++ b/app/Resources/views/admin/game/server/new.html.twig
@@ -17,6 +17,10 @@
                 <input type="text" name="name" placeholder="{{ 'game.server.name' | trans }}" />
             </div>
             <div class="form-group">
+                <label for="host">{{ 'game.server.host' | trans }}</label>
+                <input type="text" name="host" placeholder="{{ 'game.server.host' | trans }}" />
+            </div>
+            <div class="form-group">
                 <label for="banner">{{ 'game.server.banner' | trans }}</label>
                 <input type="file" name="banner" placeholder="{{ 'game.server.banner' | trans }}" />
             </div>
