--- a/web/css/main.css
+++ b/web/css/main.css
@@ -78,6 +78,10 @@ body {
     text-align:center;
 }
 
+.form input[type=checkbox] {
+    width: auto;
+}
+
 .form-group {
     padding-top:20px;
 }
@@ -106,36 +110,4 @@ body {
 
 .server em {
     display:block;
-}
-
-.login-container {
-    padding: 30px;
-    max-width: 350px;
-    width: 100% !important;
-    background-color: #9F9F9F;
-    margin: 100px auto;
-    border-radius: 2px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    font-family: roboto; 
-}
-
-.login-container h1 {
-    text-align: center;
-    font-size: 1.8em;
-    font-family: roboto; 
-    padding: 15px ;
-}
-
-.login-container input {
-    width: 100%;
-    display: block;
-    margin-bottom: 10px;
-    position: relative;
-}
-
-.login-container input[type=checkbox] {
-    display: inline;
-    width:auto ;
-    margin-top: 0px ;
 }
