Implement project description

--- a/app/Resources/views/front/index.html.twig
+++ b/app/Resources/views/front/index.html.twig
@@ -14,7 +14,7 @@
         <div class="actions">
             <a href="https://discord.gg/mDTms5c" class="button warning">{{ 'homepage.description.join_discord' | trans }}</a>
             <a href="{{ path('fos_user_registration_register') }}" class="button success">{{ 'homepage.description.play_game' | trans }}</a>
-            <a href="#" class="button warning">{{ 'homepage.description.read_info' | trans }}</a>
+            <a href="{{ path('project_description') }}" class="button warning">{{ 'homepage.description.read_info' | trans }}</a>
         </div>
     </div>
 {% endblock %}
